@@ -1,6 +1,9 @@
 ebus Daemon (ebusd) - ChangeLog
 ===============================
 
+2013-05-17:
+* Modified eb_serial_valid function and usage (thx Alexey Ozerov)
+
 2013-05-16:
 * Added ability to restrict tcp connection to localhost. (thx Alexey Ozerov)
 * Added skip of negative sleep time while waiting for QQ byte (thx Alexey Ozerov)
